# commonlibrary_utils_lite

./: BUILD.gn  README.md  README_zh.md  bundle.json  kv_store
file/: BUILD.gn  bundle.json
hals/file/: BUILD.gn  fs.h  hal_file.c
include/: hos_errno.h  hos_init.h  hos_types.h  kv_store.h  ohos_errno.h  ohos_init.h  ohos_types.h  utils_config.h  utils_file.h  utils_list.h
js/builtin/: CMakeLists.txt  bundle.json
js/builtin/common/: BUILD.gn
js/builtin/deviceinfokit/: BUILD.gn
js/builtin/deviceinfokit/include/: nativeapi_deviceinfo.h
js/builtin/deviceinfokit/src/: nativeapi_deviceinfo.cpp  nativeapi_ohos_deviceinfo.cpp
js/builtin/filekit/: BUILD.gn
js/builtin/filekit/src/: nativeapi_fs.cpp  nativeapi_fs_impl.c
js/builtin/kvstorekit/: BUILD.gn
js/builtin/kvstorekit/src/: nativeapi_kv.cpp  nativeapi_kv_impl.c
js/builtin/simulator/: BUILD.gn
kal/timer/: BUILD.gn  bundle.json
kal/timer/src/: kal.c
kv_store/: bundle.json
kv_store/src/kvstore_common/: kvstore_common.c
kv_store/src/kvstore_impl_hal/: kv_store.c
kv_store/src/kvstore_impl_posix/: kv_store.c
memory/: bundle.json
memory/include/: ohos_mem_pool.h
os_dump/: bundle.json  dump_syspara.c  dump_syspara.h
timer_task/: BUILD.gn  bundle.json
timer_task/src/: nativeapi_timer_task.c
